<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_default">Default</string>
    <string name="accent_theme_color">The accent theme color</string>
    <string name="ad_fb_version">1.9.2.9</string>
    <string name="ad_version">1.9.2.9</string>
    <string name="add">Add</string>
    <string name="add_files">Add files</string>
    <string name="add_hidden_folders">Add hidden files</string>
    <string name="add_lyric">Add lyrics</string>
    <string name="add_lyric_hint">Please input lyrics with timestamp</string>
    <string name="add_music_position">Add music to playlist</string>
    <string name="add_music_position_end">End</string>
    <string name="add_music_position_summary">Choose add music to end of playlist or top of playlist</string>
    <string name="add_music_position_top">Top</string>
    <string name="add_songs">Add songs</string>
    <string name="add_songs_to_queue">Add songs to queues</string>
    <string name="add_succeed">Add succeed</string>
    <string name="add_to">Add to</string>
    <string name="add_to_favourite">Add to favorite</string>
    <string name="add_to_favourite_2">Favorite</string>
    <string name="add_to_home">Home page</string>
    <string name="add_to_home_failed">Already exits on homepage</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="add_to_home_succeed">Added to homepage successfully</string>
    <string name="add_to_list">Add to playlist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="admob_app_id">ca-app-pub-6282254818375654~5580894523</string>
    <string name="admob_classify_browser">browser</string>
    <string name="admob_classify_camera">camera</string>
    <string name="admob_classify_gallery">gallery</string>
    <string name="admob_classify_music">music</string>
    <string name="admob_classify_none">none</string>
    <string name="admob_classify_notes">notes</string>
    <string name="admob_classify_tools">tools</string>
    <string name="admob_classify_video">video</string>
    <string name="admob_classify_weather">weather</string>
    <string name="adv_close">Close</string>
    <string name="adv_exit_btn">Tap again to exit</string>
    <string name="adv_exit_confirm">Exit</string>
    <string name="adv_exit_message">Are you sure to exit App?</string>
    <string name="adv_exit_tap">Tap again to exit</string>
    <string name="adv_flag">AD</string>
    <string name="adv_leaving">You are leaving</string>
    <string name="adv_loading">Loading...</string>
    <string name="adv_quit">Quit</string>
    <string name="adv_quit_btn">Tap again to quit app</string>
    <string name="adv_quit_cancel">Cancel</string>
    <string name="adv_quit_confirm">Quit</string>
    <string name="adv_quit_message">Quit the app completely?</string>
    <string name="adv_quit_tap_again">Please back again to exit</string>
    <string name="adv_quit_title">Quit APP</string>
    <string name="adv_rate">Rate</string>
    <string name="adv_rate_for_us">Rate For Us</string>
    <string name="adv_rate_later">Later</string>
    <string name="adv_rate_tip_2">We are working hard for a better user experience.</string>
    <string name="adv_rate_tips">Thanks for leaving a nice review, It helps us a lot.</string>
    <string name="adv_star_tip">The best we can get :)</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_setting">Advanced</string>
    <string name="album">Album</string>
    <string name="album_apply_all_album">Apply action to all tracks of the album</string>
    <string name="album_apply_all_artist">Apply action to all tracks of the artist</string>
    <string name="album_apply_all_genre">Apply action to all tracks of the genre</string>
    <string name="album_from_album_artwork">Pick from album artwork</string>
    <string name="album_from_gallery">Pick from gallery</string>
    <string name="album_load_failed">The album cover failed to load.</string>
    <string name="albums">Albums</string>
    <string name="all_lyrics">All lyrics</string>
    <string name="all_songs">All songs</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_update_download_failed">Download failed</string>
    <string name="app_update_downloading">Downloading…</string>
    <string name="app_update_not_available">Already the latest version</string>
    <string name="app_update_pending">Pending…</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="artwork_apply">Apply</string>
    <string name="audio_settings">Audio</string>
    <string name="bluetooth_auto_start">Bluetooth autostart</string>
    <string name="bluetooth_auto_start_summary">Auto start playing when a Bluetooth headset/A2DP device is connected</string>
    <string name="bluetooth_auto_stop">Bluetooth autostop</string>
    <string name="bluetooth_auto_stop_summary">Auto stop playing when a Bluetooth headset/A2DP device is disconnected</string>
    <string name="bluetooth_lyric">Car bluetooth lyrics</string>
    <string name="cancel">Cancel</string>
    <string name="click_add_queue">Click tracks add to current queue</string>
    <string name="click_add_queue_summary">Only add the song into current queue, not add/change other songs</string>
    <string name="cross_fade">Crossfade</string>
    <string name="cross_fade_tip">Fade duration between songs</string>
    <string name="delete">Delete</string>
    <string name="desktop_lrc">Desktop lyrics</string>
    <string name="enable_shake">Shake to play next song</string>
    <string name="equalizer_edit">Edit</string>
    <string name="equalizer_reverb_large_hall">Large Hall</string>
    <string name="equalizer_reverb_large_room">Large Room</string>
    <string name="equalizer_reverb_middle_hall">Medium Hall</string>
    <string name="equalizer_reverb_middle_room">Middle Room</string>
    <string name="equalizer_reverb_plate">Plate</string>
    <string name="equalizer_reverb_small_room">Small Room</string>
    <string name="gapless_playback">Gapless Playback</string>
    <string name="gapless_playback_tip">Seamless uninterrupted music</string>
    <string name="genre">Genre</string>
    <string name="headset_control_allowed">Headset control allowed</string>
    <string name="headset_control_allowed_summary">Open will be able to:\nDouble: The next one; Third: Previous</string>
    <string name="headset_setting">Headset</string>
    <string name="keep_alive_background">Music stops playing?</string>
    <string name="keep_alive_background_tip">Grant permission to avoid abnormal music stops.</string>
    <string name="library_order">Library tab order</string>
    <string name="lock_screen">Lock screen playing</string>
    <string name="lock_screen_background">Lock screen background</string>
    <string name="lock_screen_tip">Show nowplaying when lock screen</string>
    <string name="lockscreen_setting">Lockscreen</string>
    <string name="lyrics">Lyrics</string>
    <string name="music_find_duplicate">Find Duplicate</string>
    <string name="night_mode">Night mode</string>
    <string name="normal_setting">Normal</string>
    <string name="notification_settings">Notification</string>
    <string name="ok">OK</string>
    <string name="pause_when_unplugged">Paused when unplugged</string>
    <string name="pause_when_unplugged_tip">Auto stop playing when a wired headset is unplugged</string>
    <string name="play_pause_fade">Play/pause fade</string>
    <string name="play_pause_fade_tip">Fade during play/pause</string>
    <string name="play_when_inserted">Play when inserted</string>
    <string name="play_when_inserted_tip">Auto start playing when a wired headset is inserted</string>
    <string name="playlist_limit_custom">Custom</string>
    <string name="playlist_limit_day">Today</string>
    <string name="playlist_limit_forever">Forever</string>
    <string name="playlist_limit_month">This month</string>
    <string name="playlist_limit_month_3">Past 3 months</string>
    <string name="playlist_limit_month_6">Past 6 months</string>
    <string name="playlist_limit_week">This week</string>
    <string name="playlist_limit_year">This year</string>
    <string name="playlist_settings">Playlist</string>
    <string name="playlist_track_limit">Smart playlist track limit</string>
    <string name="playlist_track_limit_hint">Track limit</string>
    <string name="playlist_track_limit_summary">The limit of Recent play, Recent add &amp; Most play</string>
    <string name="queue_for_searching">Queue after searching</string>
    <string name="replay_gain">ReplayGain</string>
    <string name="replay_gain_mode">ReplayGain source mode</string>
    <string name="replay_gain_preamp">ReplayGain preamp</string>
    <string name="replay_song">Replay the song</string>
    <string name="replay_song_summery">Replay when click the current playing song</string>
    <string name="save">Save</string>
    <string name="sbar_lyric">Status bar lyrics</string>
    <string name="shake_level">Shaking sensitivity</string>
    <string name="show_forward_backward">Forward and backward</string>
    <string name="show_forward_backward_tip">Show forward and backward buttons on nowplaying page</string>
    <string name="show_hidden_folders">Show hidden files</string>
    <string name="simultaneous_play">Allow others playing music while Music Player playing</string>
    <string name="time_forward_backward">Time to fast forward and backward</string>
    <string name="track_click_operation">Open nowplaying on play</string>
    <string name="track_click_operation_tip">Click tracks to open nowplaying page</string>
    <string name="use_color_notification">Color notification</string>
    <string name="use_notification_bar">Use notification bar to play music</string>
    <string name="use_old_notification">Classic notification design</string>
    <string name="use_ten_band">Use 10 bands Equalizer</string>
</resources>