<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_tag_edit_image" />

    <com.coui.appcompat.edittext.COUIEditText
        android:id="@+id/music_edit_album"
        style="@style/TagEditField"
        android:hint="@string/album" />

    <com.coui.appcompat.edittext.COUIEditText
        android:id="@+id/music_edit_artist"
        style="@style/TagEditField"
        android:hint="@string/artist" />

    <com.coui.appcompat.edittext.COUIEditText
        android:id="@+id/music_edit_genre"
        style="@style/TagEditField"
        android:hint="@string/genre" />

    <com.coui.appcompat.edittext.COUIEditText
        android:id="@+id/music_edit_year"
        style="@style/TagEditField"
        android:hint="@string/tag_edit_year"
        android:imeOptions="actionDone"
        android:inputType="number" />
</LinearLayout>
